@@ -1,6 +1,10 @@
 = Unreleased =
 # Fixed
-- fixed label generation ajax error in order edit page 
+- fixed label generation ajax error in order edit page
+- in Omniva Orders page order link moved from customer to id
+- in Omniva Orders page renamed manifest generation button, moved to right side and added additional button above table
+- in Omniva Orders page fixed JS file link, when website is in subfolder
+- in Omniva Orders page changed Orders list order by ID only
 
 # Improved
 - added error message in order edit page, when label generation ajax got error
